# app/dto/project/create_project_res_dto.go
@@ -1,0 +1,5 @@
+package projectdto
+
+type CreateProjectResponse struct {
+	UUID string `json:"uuid" `
+}
