# app/dto/project/update_project_req_dto.go
@@ -1,0 +1,8 @@
+package projectdto
+
+type UpdateProjectReq struct {
+	ServiceType  int    `json:"service_type"`
+	Name         string `json:"name"`
+	Description  string `json:"description"`
+	DeadlineType int    `json:"deadline_type"`
+}
