# app/handler/notification_handler.go
@@ -5,6 +5,7 @@ import (
 	"net/http"
 
 	"github.com/codespace-id/codespace-x/pkg"
+	"github.com/codespace-id/codespace-x/pkg/common/middleware"
 	"github.com/julienschmidt/httprouter"
 )
 
@@ -15,10 +16,20 @@ func NewNotificationHandler(router *httprouter.Router) {
 	basePath := "/api/v1/notifications"
 	notificationHandler := &NotificationHandler{}
 
-	router.POST(basePath, notificationHandler.ListNotification())
+	router.POST(basePath, middleware.Wrapper(notificationHandler.ListNotification(), middleware.MiddlewareType{TokenAuth: true, XServiceAuthToken: true}))
 
 }
 
+// @Summary List Notif
+// @Description List Notif
+// @Tags Notifications
+// @Accept json
+// @Produce json
+// @Param X-Service-Auth-Token header string true "X-Service-Auth-Token"
+// @Param authorization header string true "Authorization value"
+// @Success 200 {object} pkg.BaseResponse{} "success"
+// @Failure default {object} pkg.BaseResponse "error"
+// @Router /api/v1/notifications [get]
 func (h *NotificationHandler) ListNotification() httprouter.Handle {
 	return func(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
 		dataByte, _ := json.Marshal(pkg.BaseResponse{
